@@ -154,4 +154,10 @@ hash fasops 2>/dev/null || {
     exit 1;
 }
 
+hash linkr 2>/dev/null || {
+    echo >&2 "linkr is required but it's not installed.";
+    echo >&2 "Install with cargo: cargo install intspan";
+    exit 1;
+}
+
 echo OK
